[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "spafe"
version = "0.1.0"
description = "Python bindings for the Rust spafe audio feature extraction crate"
requires-python = ">=3.9"
license = "BSD-3-Clause"

[tool.maturin]
features = ["python-extension"]
module-name = "spafe"
